# unihack-2025

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  units.txt
backend/: Cargo.toml
backend/src/: classes.rs  lib.rs  server.rs  shared.rs  solver.rs
backend/src/server/: api.rs  classes.rs  solver.rs
backend/src/shared/: activity.rs  groups.rs  members.rs
classes/: ACC1001.json  ACC1100.json  ACC2100.json  ACC2200.json  ACC2400.json  ACC3100.json  ACC3200.json  ACC3600.json  ACX3150.json  ADS1001.json  ADS2001.json  APG4789.json  APG5043.json  APG5045.json  APG5073.json  APG5107.json  APG5126.json  APG5127.json  APG5136.json  APG5140.json  APG5155.json  APG5199.json  APG5324.json  APG5349.json  APG5393.json  APG5426.json  APG5601.json  APG5628.json  APG5729.json  APG5730.json  APG5746.json  APG5875.json  APG5883.json  ASP1010.json  ASP2011.json  ASP3051.json  ASP3231.json  ATS1001.json  ATS1020.json  ATS1044.json  (+755 more)
scraper/: scrape.elv
src/: api.rs  app.module.scss  app.rs  global.module.scss  lib.rs  main.rs
src/components/: boo.module.scss  boo.rs  button.module.scss  button.rs  member_nav.rs  mod.rs  selector.module.scss  selector.rs
src/pages/: boo.module.scss  boo.rs  calendar.module.scss  calendar.rs  group.module.scss  group.rs  group_layout.module.scss  group_layout.rs  home.module.scss  home.rs  member_layout.module.scss  member_layout.rs  mod.rs  no_member_selected.module.scss  no_member_selected.rs  not_found.module.scss  not_found.rs  preferences.module.scss  preferences.rs  timetable.module.scss  timetable.rs
style/: main.scss
test-backend/: Cargo.toml
test-backend/src/: main.rs
