[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
derive_more = { version = "2", features = ["full"] }
itertools = "0.14"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.140"
tap = "1"
tokio = { version = "1", default-features = false, features = ["fs"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["fs"] }
