[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# if a dependency only needs to be used on the server,
# add `optional = true` and add the crate to
# the `ssr` feature below
[dependencies]
anyhow = "1.0.97"
derive_more = { version = "2", features = ["full"], optional = true }
itertools = { version = "0.14", optional = true }
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.140"
tap = { version = "1", optional = true }
tokio = { version = "1", default-features = false, features = ["fs"], optional = true }
tokio-stream = { version = "0.1.17", default-features = false, features = ["fs"], optional = true }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["js", "rng", "v4", "v7"] }

[features]
ssr = ["derive_more", "itertools", "tap", "tokio", "tokio-stream"]
