[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# if a dependency only needs to be used on the server,
# add `optional = true` and add the crate to
# the `ssr` feature below
[dependencies]
tap = { version = "1", optional = true }
itertools = { version = "0.14", optional = true }
derive_more = { version = "2", features = ["full"], optional = true }
serde = { version = "1", features = ["derive", "rc"] }
rand = { version = "0.9.0", optional = true }
uuid = { version = "1.16.0", features = ["js", "rng", "v4", "v7"] }
thiserror = "2.0.12"

[features]
ssr = ["tap", "itertools", "derive_more", "rand"]
